<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MobileAssignment</string>
    <string name="lblEmail">Email</string>
    <string name="lblPassword">Password</string>
    <string name="loginBtn_mainPage">Login</string>
    <string name="registerBtn_mainPage">SignUp</string>
    <string name="termCondition">Terms &amp; Conditions</string>

    <string name="lblRegisterFinder">Register Finder</string>
    <string name="lblRegisterCompany">Register Company</string>
    <string name="hint_usernameText">Username</string>
    <string name="hint_EmailText">Email</string>
    <string name="hint_PasswordText">Password</string>
    <string name="hint_ConfirmPasswordText">Confirm Password</string>
    <string name="hint_Age">Age</string>
    <string name="hint_ContactNoText">Contact No (xxx-xxxxxxx)</string>
    <string name="hint_AddressText">Address</string>

    <string name="hint_companyName">Company Name</string>
    <string name="hint_schoolName">School Name</string>

    <!-- regitration Button-->
    <string name="lblSubmit">Submit</string>
    <string name="lblBack">Back</string>
    <string name="lblLogin">Login</string>
    <string name="lblConfirm">Confirm</string>
    <string name="lblContinue">Continue</string>
    <string name="lblRegisterPosition">Register Position</string>
    <string name="registerAdminButton">Poster</string>
    <string name="registerUserButton">User</string>

    <string-array name="fieldOfStudy">
        <item>Accountance &amp; Finance</item>
        <item>Internet Technology</item>
        <item>Achitecture</item>
        <item>Multimedia &amp; Broadcast</item>
    </string-array>

    <!--education -->
    <string name="lblEducation">Education</string>
    <string name="lblSchoolName">School Name</string>
    <string name="lblFieldOfStudy">Field of Study</string>
    <string name="lblQualification">Qualification</string>
    <string name="lblGraduateDate">Graduation Date (01-01-2020)</string>

    <!--experience -->
    <string name="lblExperience">Experience</string>
    <string name="lblSpecialization">Specialization</string>
    <string name="lblPosition">Position</string>
    <string name="lblJoinDate">Joined Date</string>
    <string name="lblLeftDate">Left Date</string>
    <string name="lblNotice_exp">*You are able to skip this step if you doesn\'t have any working experience</string>

    <!--reset password -->
    <string name="lblForgetPassword">Forget Password</string>
    <string name="hint_usernameResetPassword">Username / Email</string>
    <string name="hint_currentPassword">Current password</string>
    <string name="hint_newPassword">New password</string>


    <!--for add job-->
    <string name="addjobtitle">Add Job</string>

    <string name="addjobPosition">Job Position</string>

    <string name="addjobDescription">Job Description</string>

    <string name="addjobsalary">Job Salary</string>

    <string name="addjobrequirement">Job Requirements</string>

    <string name="addbtn">Add</string>

    <string name="backbtn">Back</string>
    <string name="loading">Loading</string>
    <string name="addJob">Add Job</string>
    <string name="viewJob">View Job</string>
    <string name="logoUt">Logout</string>
    <string name="companyNamE">Company Name</string>
    <string name="approvedd">Approve</string>
    <string name="rejectedd">Reject</string>
    <string name="UserNName">Username</string>
</resources>
