<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addJobActivity">



    <TextView
        android:id="@+id/addjobs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addjobtitle"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/addJobsPosition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/addjobPosition"
        android:inputType="text" />

    <EditText
        android:id="@+id/addJobsDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/addjobDescription"
        android:inputType="text" />

    <EditText
        android:id="@+id/addJobsSalary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/addjobsalary"
        android:inputType="number" />

    <EditText
        android:id="@+id/addJobsRequirement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/addjobrequirement"
        android:inputType="text" />

    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/addjobbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addbtn" />

    <Button
        android:id="@+id/backbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/backbtn" />


</LinearLayout>