<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="196dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblLogin"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/emailText_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_EmailText"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/passwordText_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_PasswordText"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginBtn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginBtn_mainPage" />

    <Button
        android:id="@+id/backBtn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblBack" />
</LinearLayout>